--- a/Membrana/index.html
+++ b/Membrana/index.html
@@ -200,7 +200,7 @@ footer a {
 
     // Espera 1 segundos e redireciona
     setTimeout(function () {
-      window.location.href = "membrana_entrada.html";
+      window.location.href = "entrar/membrana_entrada.html";
     }, 1000);
   });
 </script>
