--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h1>VOCÊ JÁ ESTÁ DENTRO</h1>
     <p>Este é o ponto de entrada para um ARG em constante mutação. MEMBRANA não é um jogo — é uma entidade sensorial que vive entre códigos e paranoia.
     </p>
-    <button class="enter-btn" onclick="location.href='Membrana/index.html'">ENTRAR NA MEMBRANA</button>
+    <button class="enter-btn" onclick="location.href='Membrana/main.html'">ENTRAR NA MEMBRANA</button>
   </div>
 </body>
 </html>
