deixando mais real acrescentamos um forum mas faltão detalhes ainda como conectar as mesagems via jsmail (sem backend)

--- a/Membrana/main.html
+++ b/Membrana/main.html
@@ -180,7 +180,7 @@ footer a {
     <a href="jornal/jornal.html" class="card">🗞 Jornal Local</a>
     <a href="departamento_investigacao/departamento_investigacao.html" class="card">🕵️ Departamento de Investigação</a>
     <a href="arquivo/arquivo.html" class="card">📁 Arquivo Membrana</a>
-    <a href="#" class="card">💻 Fórum Civil</a>
+    <a href="comunicado.html" class="card">💻 Fórum Civil</a>
     <a href="wiki/index.html" class="card">## Wiki Escura</a>
   </div>
 </section>
