--- a/Membrana/forum.html
+++ b/Membrana/forum.html
@@ -275,6 +275,89 @@
       text-align: center;
       color: #6e7681;
     }
+      .github-comment-container {
+    margin: 2rem 0;
+    font-family: 'Roboto Mono', monospace;
+  }
+
+  .github-comment-box {
+    background: #161b22;
+    border: 1px solid #30363d;
+    border-radius: 6px;
+    padding: 1.5rem;
+    box-shadow: 0 0 15px rgba(88, 166, 255, 0.1);
+    position: relative;
+    overflow: hidden;
+  }
+
+  .github-comment-box::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 4px;
+    height: 100%;
+    background: linear-gradient(to bottom, #58a6ff, #f85149);
+  }
+
+  .github-comment-title {
+    color: #58a6ff;
+    margin-top: 0;
+    font-size: 1.2rem;
+    border-bottom: 1px solid #30363d;
+    padding-bottom: 0.5rem;
+  }
+
+  .github-comment-desc {
+    color: #8b949e;
+    font-size: 0.9rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .github-comment-btn {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    background: #238636;
+    color: white !important;
+    padding: 0.7rem 1.5rem;
+    border-radius: 6px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    border: 1px solid #2ea043;
+  }
+
+  .github-comment-btn:hover {
+    background: #2ea043;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(46, 160, 67, 0.2);
+  }
+
+  .github-icon {
+    fill: white;
+  }
+
+  .github-comment-warning {
+    font-size: 0.8rem;
+    color: #f85149;
+    margin-top: 1rem;
+    text-align: right;
+  }
+
+  /* Efeito glitch no hover (opcional) */
+  .github-comment-btn:hover .github-icon {
+    animation: glitchIcon 0.5s linear infinite;
+  }
+
+  @keyframes glitchIcon {
+    0% { transform: translate(0); }
+    20% { transform: translate(-2px, 2px); }
+    40% { transform: translate(-2px, -2px); }
+    60% { transform: translate(2px, 2px); }
+    80% { transform: translate(2px, -2px); }
+    100% { transform: translate(0); }
+  }
   </style>
 </head>
 
@@ -290,6 +373,26 @@
   <div id="threads-container">
     <p>Carregando tópicos...</p>
   </div>
+
+
+
+
+  <div class="github-comment-container">
+  <div class="github-comment-box">
+    <h3 class="github-comment-title">Contribua com a Investigação</h3>
+    <p class="github-comment-desc">Compartilhe informações anonimamente ou deixe seu comentário na thread oficial:</p>
+    <a href="https://github.com/ops-era-phishing/Membrana/issues/" target="_blank" rel="noopener noreferrer" class="github-comment-btn">
+      <svg class="github-icon" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
+        <path fill="currentColor" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+      </svg>
+      Comentar na Issue #Membrana
+    </a>
+    <p class="github-comment-warning">⚠️ Acesso monitorado pelo Portal Floripa. Use VPN.</p>
+  </div>
+</div>
+
+
+
 
   <!-- Novo formulário com EmailJS -->
   <div class="form-container-emailjs">
