--- a/game/membrana/main.html
+++ b/game/membrana/main.html
@@ -202,7 +202,7 @@ footer a {
 <script>
   document.getElementById("meuBotao").addEventListener("click", function () {
     // Mostra o pop-up (pode ser um alert ou algo mais estiloso com CSS/JS)
-    alert("Sua mente já foi injetada, te redicionarei para a pagina +INFO");
+    alert("Sua mente já foi intetada, assim que te redicionarei para a pagina +INFO - combinado?");
 
     // Espera 1 segundos e redireciona
     setTimeout(function () {
